Removed the fixed width of the nav, instead relying on the padding of the nav items in the nav as a flexbox to set the width and remove the extra space previously at the end of the navbar.

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -61,7 +61,6 @@ body {
 
 nav {
     background-image: linear-gradient(#646464, #5e5e5e,#707070, #7a7a7a);
-    width: 980px;
     height: 36px;
     border-radius: 5px;
 }
